--- a/Aula/Aula08 - InsertionSort/Aula 08 - ATV - Insertion Sort.csproj
+++ b/Aula/Aula08 - InsertionSort/Aula 08 - ATV - Insertion Sort.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Aula08___InsertionSort</RootNamespace>
+    <RootNamespace>Aula_08___ATV___Insertion_Sort</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
